feat: create bill controller
